# QueryNest

./: .dockerignore  .gitignore  CLI.md  Dockerfile  PRD.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: CHAT_HISTORY_MANAGEMENT.md
src/config/: bootstrap.py  config_loader.py  gemini.py  setup.py
src/embeddings/: embedder.py
src/loaders/: youtube_loader.py
src/memory/: chat_memory.py  chat_menu.py
src/processor/: text_splitter.py
src/querynest/cli/commands/: chat.py  history.py  sessions.py
src/querynest/config/: bootstrap.py  config_loader.py  config_model.py  gemini.py
src/querynest/loaders/: pdf_loader.py  web_loader.py  youtube_loader.py
src/querynest/memory/: chat_memory.py
src/querynest/processor/: text_splitter.py
src/querynest/vector_store/: faiss_store.py
src/rag/: rag_chain.py
src/sessions/: session_meta.py
src/utils/: hashing.py  paths.py
src/vector_store/: faiss_store.py
